# sitykha-shell

./: .gitignore  .qmlls.ini  CMakeLists.txt  Makefile  README.md  qmldir  shell.qml
components/: CustomComboBox.qml  CustomIcon.qml  CustomMenu.qml
config/: Appearance.qml  BarConfig.qml  Config.qml  LockscreenConfig.qml  qmldir
config/defaults/: lockscreen.json
modules/lockscreen/: Lock.qml  Lockscreen.qml
modules/lockscreen/components/: Avatar.qml  IconButton.qml  Input.qml  LayoutMenu.qml  LayoutSelector.qml  LockContent.qml  LockScreen.qml  LoginScreen.qml  MenuArea.qml  PowerMenu.qml  Spinner.qml
services/: Pathes.qml
src/backend/: CMakeLists.txt
src/backend/config/: ConfigManager.cpp  ConfigManager.hpp  ConfigObject.cpp  ConfigObject.hpp
src/backend/config/appearance/: GlobalThemeConfig.cpp  GlobalThemeConfig.hpp
src/backend/config/lock/: LockConfig.cpp  LockConfig.hpp
src/backend/config/pathes/: PathConfig.cpp  PathConfig.hpp
src/backend/models/: KeyboardModel.cpp  KeyboardModel.hpp  WallpaperModel.cpp  WallpaperModel.hpp
src/backend/services/: UserInfo.cpp  UserInfo.hpp
src/core/: CMakeLists.txt  main.cpp
src/core/config/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.hpp  ConfigObject.cpp  ConfigObject.hpp  LockConfig.hpp
src/core/config/lock/: LockConfig.cpp  LockConfig.hpp
src/core/qml/lockscreen/: Lock.qml
src/core/qml/lockscreen/components/: Avatar.qml  IconButton.qml  Input.qml  LockScreen.qml  LoginScreen.qml  PowerMenu.qml  Spinner.qml
src/core/services/: Pathes.qml
src/qml/lockscreen/components/: Avatar.qml  Input.qml  LoginScreen.qml
